--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Usman's Blog
-bio:                'Intro to some many Computer Science Concepts'
+bio:                'Intro to some of the Computer Science Concepts'
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
