--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ disqus_shortname:   taylantatli
 facebook:           usman.ownz.the.universe
 github:             sayedusmankhalid
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin:          sayedusmankhalid
+linkedin:          sayedusmankhalid@gmail.com
 #xing:              username
 #instagram:          username
 #lastfm:            username
